Remove internal planning docs and demo files from repo
These files are kept locally but excluded from the public repository.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Internal docs (local only)
+demo.html
+demo_v2.html
+IMPLEMENTATION_PLAN.md
+PHASE2_IMPLEMENTATION.md
+PROPOSAL.cn.md
+PROPOSAL.md
