--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.0",
     "react-virtuoso": "^4.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
